--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
 		  </ul>
 		  <ul class="nav navbar-nav navbar-right">
 		  <% if user_signed_in? %>
-		  	<li class="dropdown">
-		  		<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><span class="caret">
+		  	<li class="dropdown" id="profileSettings">
+		  		<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-target="profileSettings"><%= current_user.email %><span class="caret">
 		  		</span></a>
 		  		<ul class="dropdown-menu">
 				    <li><%= link_to "Profile Settings", edit_user_registration_path %></li>
@@ -58,6 +58,12 @@
 		
 	</div>
 </div>
+
+<!--
+$(document).ready(function() {
+    $(".dropdown-toggle").dropdown();
+});
+-->
 
 </body>
 </html>
