added javascript at bottom of application layout, hopefully to fix the dropdown menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,11 +59,11 @@
 	</div>
 </div>
 
-<!--
+<script>
 $(document).ready(function() {
     $(".dropdown-toggle").dropdown();
 });
--->
+</script>
 
 </body>
 </html>
