disabling sign up 2

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-  <h2>Sign up</h2>
+  <h2>Sign up disabled, please contact Eric to inspect the sign in feature</h2>
 
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal', style: "padding-right: 25px"}) do |f| %>
