--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   				<span class="icon-bar"></span>
   				<span class="icon-bar"></span>
   			</button>
-  			<%= link_to "Eric Eschelbach | Audio Engineer",       root_path, class: 'navbar-brand' %>
+  			<%= link_to "Eric Eschelbach | Audio Engineer",       root_path, class: 'navbar-brand hidden-xs' %>
+  			<%= link_to "Eric Eschelbach",       root_path, class: 'navbar-brand visible-xs' %>
+
   		</div>
 	<div>
 	  <div class="collapse navbar-collapse" id="mainNavBar">
