revamped the sign up procedure.. now anyone can sign up, but only my email has access to edit the entries

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -12,7 +12,7 @@
       <tr>
         <td><%= artist.name %></td>
         <td><%= artist.genre %></td>
-        <% if user_signed_in? %>
+        <% if user_signed_in? && current_user.email == "ericeschelbach@gmail.com" %>
           <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
           <td><%= link_to 'Delete', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
