--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-  <h2>Sign up disabled, please contact Eric to inspect the sign in feature</h2>
+<h2>Sign up</h2>
 
+<p>Sign up disabled, please contact Eric directly for access</p><br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal', style: "padding-right: 25px"}) do |f| %>
   <%= devise_error_messages! %>
-<!--
   <div class="form-group">
     <%= f.label :email, class: "col-sm-2 control-label" %>
     <div class="col-sm-6">
@@ -35,7 +35,10 @@
   </div>
 <% end %>
 
--->
+
+
+<%= link_to "Back", welcome_index_path %>
+
 
 
 
