got mandrill working in dev environment with the keys directly in the config file, lets see if production works and lets see if the environment variables are passing

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div style="text-align: center">
 	<h1>Welcome</h1>
 
+	<h1>mandrill user name: <%= @mandrill_username %></h1>
 
 	<h3>This is my web-based audio engineering resume.</h3>
 
