--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
 <div style="text-align: center">
 	<h1>Welcome</h1>
-
-	<h1>mandrill user name: <%= @mandrill_username %></h1>
+	<h1>MANDRILL_USERNAME:<%= @mandrillusername %> </h1>
 
 	<h3>This is my web-based audio engineering resume.</h3>
 
