--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div style="text-align: center">
 	<h1>Welcome</h1>
 	<h1>MANDRILL_USERNAME:<%= @mandrillusername %> </h1>
+	<h1>MANDRILL_PASSWORD:<%= @mandrillpassword %> </h1>
 
 	<h3>This is my web-based audio engineering resume.</h3>
 
