--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,22 @@
 <h2>Resend confirmation instructions</h2>
+<%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
+<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, class: "horizontal-form" }) do |f| %>
+  <div class="form-group" style="padding-top: 25px">
+    <%= f.label :email, class: "col-sm-2 control-label" %><br />
+    <div class="col-sm-6">
+	    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control" %> 
+	</div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+  <div class="form-group">
+  	<div class="col-sm-offset-2 col-sm-6">
+    	<%= f.submit "Resend confirmation instructions", class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="form-group" style="padding-top: 25px">
+  <div class="col-sm-offset-2 col-sm-6">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
