--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,6 +38,7 @@
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-6">
       <%= f.submit "Update", class: "btn btn-primary" %> 
+    </div>
   </div>
 <% end %>
 
