--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,24 +49,17 @@
 
 </head>
 <body>
-<div class="main_content">
-	<% if notice != nil %>
-	  <div class="alert alert-info">
-	    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><%= notice %>
-	  </div>
-	<% end %>
-	<div class="col-md-offset-2 col-md-8">
-
-		<%= yield %>
-		
+	<div class="main_content">
+		<%= render 'layouts/messages' %>
+		<div class="col-md-offset-2 col-md-8">
+			<%= yield %>	
+		</div>
 	</div>
-</div>
-
-<script>
-$(document).ready(function() {
-    $(".dropdown-toggle").dropdown();
-});
-</script>
+	<script>
+	$(document).ready(function() {
+	    $(".dropdown-toggle").dropdown();
+	});
+	</script>
 
 </body>
 </html>
