final small changes to devise views

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -8,7 +8,7 @@
 	    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control" %> 
 	</div>
   </div>
-  <div class="form-group">
+  <div class="form-group" style="padding-top: 25px">
   	<div class="col-sm-offset-2 col-sm-6">
     	<%= f.submit "Resend confirmation instructions", class: "btn btn-primary" %>
     </div>
