--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -23,6 +23,6 @@
 
 <br>
 
-<% if user_signed_in? %>
+<% if user_signed_in? && current_user.email == "ericeschelbach@gmail.com" %>
   <%= link_to 'New Artist', new_artist_path, class: 'btn btn-default' %>
 <% end %>
