--- a/app/views/consoles/index.html.erb
+++ b/app/views/consoles/index.html.erb
@@ -17,6 +17,6 @@
 
 <br>
 
-<% if user_signed_in? %>
+<% if user_signed_in? && current_user.email == "ericeschelbach@gmail.com" %>
   <%= link_to 'New Console', new_console_path, class: 'btn btn-default' %>
 <% end %>
