--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -17,7 +17,7 @@
 <br>
 
 
-<% if user_signed_in? %>
+<% if user_signed_in? && current_user.email == "ericeschelbach@gmail.com" %>
   <%= link_to 'New Venue', new_venue_path, class: 'btn btn-default' %>
 <% end %>
 
