Added name to return E-mail address

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   				<span class="icon-bar"></span>
   			</button>
   			<%= link_to "Eric Eschelbach | Audio Engineer",       root_path, class: 'navbar-brand hidden-xs' %>
-  			<%= link_to "Eric Eschelbach",       root_path, class: 'navbar-brand visible-xs' %>
+  			<%= link_to "Eric Eschelbach Resume",       root_path, class: 'navbar-brand visible-xs' %>
 
   		</div>
 	<div>
